# calculate-prop-65

./: CLAUDE.md  README.md  SKILL.md  original.py  pyproject.toml
reference/: caution_formula.json  high_risk_formula.json  level_off.json  safe_formula.json  single_ingredient.json
scripts/: __init__.py  calculate.py  calculator.py  constants.py  loaders.py  models.py  renderers.py  risk.py  schema.py
tests/: conftest.py  test_calculator.py  test_cli.py  test_loaders.py  test_models.py  test_renderers.py  test_schema.py
