[project]
name = "calculate-prop-65"
version = "0.1.0"
description = "California Prop 65 lead-exposure calculator for supplement capsule formulations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.0",
    "rich>=13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
